MB-59289, MB-59826: Use backfill_mem_threshold for ActiveStream quota

…instead of mutation_mem_ratio, so that we are less aggressive in
preventing other components from requesting streams.

Also give a free pass to ns_server until it can handle
temporary_failure gracefully.

Change-Id: I2f5fbc9532b70ea143cb2d18b982771c5a032bcd
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/201703
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>